# DIP-project

./: .gitignore  .syntastic_clang_check_config  CMakeLists.txt  Makefile  README.md  display_graph.py  good_params.txt  image_as_graph.txt  image_sementation.cc  image_to_graph.cc  image_to_graph.out  run_tests.sh
igraph/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
igraph/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
igraph/doc/: Makefile
igraph/src/: Makefile  Makefile.in
igraph/src/.deps/: libigraph_la-DensityGrid.Plo  libigraph_la-DensityGrid_3d.Plo  libigraph_la-NetDataTypes.Plo  libigraph_la-NetRoutines.Plo  libigraph_la-adjlist.Plo  libigraph_la-arpack.Plo  libigraph_la-array.Plo  libigraph_la-atlas.Plo  libigraph_la-attributes.Plo  libigraph_la-basic_query.Plo  libigraph_la-bfgs.Plo  libigraph_la-bigint.Plo  libigraph_la-bignum.Plo  libigraph_la-bipartite.Plo  libigraph_la-blas.Plo  libigraph_la-bliss.Plo  libigraph_la-bliss_eqrefhash.Plo  libigraph_la-bliss_graph.Plo  libigraph_la-bliss_heap.Plo  libigraph_la-bliss_orbit.Plo  libigraph_la-bliss_partition.Plo  libigraph_la-bliss_timer.Plo  libigraph_la-bliss_utils.Plo  libigraph_la-cattributes.Plo  libigraph_la-centrality.Plo  libigraph_la-cliques.Plo  libigraph_la-clustertool.Plo  libigraph_la-cocitation.Plo  libigraph_la-cohesive_blocks.Plo  libigraph_la-community.Plo  libigraph_la-complex.Plo  libigraph_la-components.Plo  libigraph_la-conversion.Plo  libigraph_la-cores.Plo  libigraph_la-distances.Plo  (+114 more)
igraph/tests/: Makefile  Makefile.in  atconfig
(+473 files in other folders)
